syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.coreydaley.crawler";
option java_outer_classname = "CrawlerProto";

package crawler;

service Crawler {
  rpc Start (StartRequest) returns (StartReply) {}
  rpc Stop (StopRequest) returns (StopReply) {}
  rpc List (ListRequest) returns (ListReply) {}
}

message StartRequest {
  string name = 1;
}

message StartReply {
  string message = 1;
}

message StopRequest {
  string name = 1;
}

message StopReply {
  string message = 1;
}

message ListRequest {
  string name = 1;
}

message ListReply {
  bytes message = 1;
}